# quad_simulator

./: CMakeLists.txt  CMakeLists.txt~  README.md  package.xml
iarc_arena/materials/scripts/: iarc_arena.material  robocup_3Dsim_field.material
launch/: arena.launch  ground.launch  iarc.launch  new_arena.launch  new_arena.launch~  new_arena_beta.launch  one_patrolbot.launch  one_robot.launch
meshes/: albatross_base.dae  base_combined.STL
models/create/: model-1_2.sdf  model-1_3.sdf  model-1_4.sdf  model.sdf
models/iarc_with_walls/: model.config  wall.sdf
models/iarc_with_walls/materials/scripts/: iarc_arena.material  robocup_3Dsim_field.material
sdf/: ground.sdf  model-1_4.sdf  model-1_4.sdf~  patrolbot.sdf  patrolbot.sdf~  targetbot.sdf
src/: ContactPlugin.cc  ContactPlugin.hh  ContactPlugin.hh~  groundbot (copy).cpp  groundbot.cpp  gtpub.cpp  patrolbot.cpp  quad_simulator.cpp
urdf/: quadrotor.gazebo.xacro  quadrotor.urdf.xacro  quadrotor_base.urdf.xacro  quadrotor_downward_cam.urdf.xacro
worlds/: iarc_world.world
